--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Secure backend proxy for ReplyKaro AI Chrome extension",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "lint": "eslint .",
+    "format": "prettier --write ."
   },
   "keywords": [
     "openai",
@@ -22,5 +24,11 @@
     "express": "^5.1.0",
     "form-data": "^4.0.2",
     "multer": "^2.0.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.57.1",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-prettier": "^5.4.0",
+    "prettier": "^3.5.3"
   }
 }
